v 7.1.3
  - Improve the to_patch and to_diff methods for merge commits

v 7.1.2
  - Finding commit by invalid rev returns nil instead of error.

v 7.1.1
  - Verify found object is actually a commit in Commit.find

v 7.1.0
  - Convert encoding of all freeform text to UTF-8.

v 7.0.0
  - Move everything to rugged. Drop gitlab-grit dependency
  - Removed GitLab-only specific classes: GitStats, Stats, LogParser

v 6.3.0
  - Get messages for annotated tags (Sean Edge)
  - Blame using rugged (Evgeniy Sokovikov)

v 6.2.1
  - Fix Branch.new method for branch "origin/HEAD" because it points on ref instead of commit. 

v 6.2.0
  - When archive repository - use storage path for temp files too
  - Updated rugged to 0.21

v 6.1.0
  - Remove limit parameter from Compare.new method 
  - Prevent 'undefined method' exception when pass wrong ref to Compare

v 6.0.1
  - Use tmp file for archive repository unless file is ready 

v 6.0.0
  - Add Repository#commit_count method

v 5.9.0
  - Performance improvements for Commit#find method

v 5.8.0
  - Less strict dependency rules
  - Updated gems
  - Use the new shell command style

v 5.7.1
  - Fixed branch discover if master does not exist

v 5.7.0
  - Fixed issue with bz2 archive not being created (Jason Hollingsworth)
  - Fixed branch discover if HEAD has not been updated to one of the existing branches (Jason Hollingsworth)

v 5.6.0
  - Rename Tree#contribution? to Tree#contributing?
  - Use new light seed repo

v 5.5.0
  - Add Tree#contribution? method

v 5.4.0
  - Get rid of BROKEN_DIFF constant
  - Diff.between raises exception in case of timeout now
  - Add tests to Compare
  - Cache diff result for Compare 

v 5.3.0
  - Add Repository#submodules method

v 5.2.0
  - Add EncodingHelper. Encode blob data to utf8

v 5.1.0
  - Added rugged dependency
  - Git::Tag and Git::Branch objects
  - Branch, Tag, Tree uses rugged
  - Blob use rugged

v 5.0.0
  - Use new version of linguist

v 4.1.0
  - Allow to specify diff paths